fix that overflow select form

--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,21 @@
 	color:blue;
 	cursor: pointer;
 }
+.bragging-feedback-select {
+	height:40px;
+	display: inline-block;
+    width: 100%;
+    /*height: calc(2.25rem + 2px);*/
+    line-height: 1.5;
+    color: rgb(73, 80, 87);
+    vertical-align: middle;
+    appearance: none;
+    padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+    background: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E) right 0.75rem center / 8px 10px no-repeat rgb(255, 255, 255);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(206, 212, 218);
+    border-image: initial;
+    border-radius: 0.25rem;
+
+}
